src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/warnings.warnings
[/errors/warnings.input]: (1,1 - 1,7): The keyword 'define' is deprecated, use 'def' instead.
[/errors/warnings.input]: (3,9 - 3,11): Using ':=' for named arguments is deprecated, use '=' instead.